test/integration/expected/nested/nested-test-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contoso-deployment
  labels:
    app: contoso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contoso
  template:
    metadata:
      labels:
        app:
    spec:
      containers:
        - name: contoso
          image: contoso:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: contoso-service
spec:
  selector:
    app: contoso
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: contoso-ingress
  annotations:
    contoso.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /testpath
            backend:
              serviceName: contoso-service
              servicePort: 80
          - path: /testpath2
            backend:
              serviceName: unrouted-service
              servicePort: 80
